# Hand-Coded-TPCH

./: .gitignore  .gitmodules  README.md
doc/: 1.md  README.md
src/: CMakeLists.txt  README.md  config.h.in  main.cc
src/test/util/: CMakeLists.txt  csv-reader-test.cc  csv-reader-test.h  memory-manager-test.cc  memory-manager-test.h
src/util/: CMakeLists.txt  common-macros.h  csv-reader.h  memory-manager.h  utils.cc
